tests/macros/editor/validate_on_key.rs
fn main() {
    requestty::questions![Editor { validate_on_key: todo!() }];
}
